--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 bcrypt==4.0.1
-beckett==0.8.0
 blinker==1.5
 cachetools==5.3.2
 certifi==2022.12.7
@@ -13,9 +12,11 @@ Flask-Bcrypt==1.0.1
 Flask-DebugToolbar==0.13.1
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.1.1
+google-api-core==2.14.0
 google-api-python-client==2.107.0
 google-auth==2.23.4
 google-auth-httplib2==0.1.1
+googleapis-common-protos==1.61.0
 greenlet==2.0.2
 gunicorn==20.1.0
 html5lib==1.1
@@ -33,7 +34,7 @@ psycopg2-binary==2.9.5
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pyparsing==3.1.1
-requests==2.10.0
+requests==2.31.0
 rsa==4.9
 six==1.10.0
 SQLAlchemy==1.4.0
